fix: removed margin on mobile

--- a/assets/design.styl
+++ b/assets/design.styl
@@ -50,7 +50,7 @@ canvas
       flex-direction column
       justify-content center
       min-height 400px
-      width 400px
+      align-self stretch
 
       > .wrapper
         flex 1
